third_party/move/move-compiler-v2/tests/more-v1/parser/invalid_call_lhs_return.exp

Diagnostics:
error: function values outside of inline functions not supported in this language version
  ┌─ tests/more-v1/parser/invalid_call_lhs_return.move:3:9
  │
3 │         (return ())(0, 1);
  │         ^^^^^^^^^^^^^^^^^
