third_party/move/move-compiler-v2/tests/more-v1/parser/invalid_call_lhs_return.move
module 0x123::M {
    fun foo() {
        (return ())(0, 1);
    }
}
